--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@
 }
 .button-hero {
     background-color: #2196F3;
+    cursor: pointer;
 }
 /* respect to details, punctualness, planning, modern tecnologies */
 .title {
@@ -120,6 +121,7 @@
 .button-portfolio {
     background-color: #2196F3;
     color: #F5F4FA;
+    cursor: pointer;
 }
 /* what are we doing */
 .what-are-we-doing {
@@ -136,7 +138,6 @@
     color: #757575;
 }
 /* footer */
-.footer
 .adress-town {
         font-size: 14px;
         line-height: calc(24 / 14);
@@ -148,4 +149,3 @@
     color: rgba(255, 255, 255, 0.6);
         text-decoration: none;
 }
-/* main portfolio */
